# django-frontadmin

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py  urls.py
frontadmin/: apps.py  urls.py
frontadmin/static/frontadmin/css/: custom.css  forms.css  frontadmin.min.css  frontendadmin.css
frontadmin/static/frontadmin/js/: custom.js  frontadmin.js  frontadmin.min.js
frontadmin/templates/: base.html  base_extra.html  baseof.html  simple_form.html  simple_form_horizontal.html
frontadmin/templates/elements/: form.html  logo.html  warnings_recent_content.html
frontadmin/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
frontadmin/templatetags/: content_widgets.py
static/adminlte/css/: forms.css
static/frontadmin/css/: custom.css  widgets.css
templates/: base.html  base_extra.html  baseof.html  forgotpass.html  profile.html  register.html
templates/elements/: logo.html
templates/registration/: password_change_done.html  password_change_form.html  password_reset_email.html  password_reset_form.html
templatetags/: content_widgets.py
